ready for release

--- a/Resources/content/office.html
+++ b/Resources/content/office.html
@@ -7,7 +7,7 @@
 			background-color: #000;
 			color: #fff; 
 			font-family : Helvetica Neue;
-			font-size: 14px
+			font-size: 40px
 		}
 		a {
 			color: #fff;
@@ -17,11 +17,11 @@
 	</head>
 	<body> 
 		<p>204 Fifth Avenue<br />New York, NY 10010</p>
-		<p>T +212 683 7000<br />F +212 532 0181<br />E <a style="text-decoration:none;color:#fff" href="mailto:info@pentagram.com">info@pentagram.com</a></p>
+		<p>T +1212 683 7000<br />F +1212 532 0181<br />E <a style="text-decoration:none;color:#fff" href="mailto:info@pentagram.com">info@pentagram.com</a></p>
 		<h3>Location</h3>
 		<p>Flatiron district. Our office is a five-story building between 25th and 26th Streets, directly across from Madison Square Park.</p>
 		<h3>Directions via public transport</h3>
-		<p>From N/R subway station at 23rd Street, walk north two blocks from the intersection of Fifth Avenue and Broadway. Our building is marked with a letter P banner.</p>
-		<p><br><br></p>
+		<p>From N/R subway station at 23rd Street, walk north two blocks from the intersection of Fifth Avenue and Broadway.</p>
+		<p><br><br><br><br></p>
 	</body>
 </html>
